# robust-databricks

./: .config_file  .gitignore  CLAUDE.md  README.md  databricks.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cicd.yml  deploy.yml  test.yml
dbt_reliability/: README.md  dbt_project.yml
dbt_reliability/models/gold/: schema.yml
dbt_reliability/models/silver/: orders_cleaned.sql
docs/: architecture.md  deployment.md  git-databricks.md  index.md  setup.md  testing.md
docs/components/: cost-governance.md  dbt-models.md  ingestion.md  schema-sentinel.md  sla-monitor.md
docs/reference/: adr.md  catalog-layout.md  schema-config.md
reliability_engine/config/: schema_config.json  schema_v2.json  schema_v3.json  sla_config.json
reliability_engine/docs/: ADR.md
reliability_engine/notebooks/: cost_projection.py
reliability_engine/scripts/: _config.py  _orders_generator.py  generate_data.py  ingest_bronze.py  reset_data.py  schema_sentinel.py  sla_monitor.py
reliability_engine/tests/: test_idempotency.py  test_schema_scenarios.py
resources/: reliability_pipeline.job.yml  reset_data.job.yml  scenario_baseline.job.yml  scenario_breaking.job.yml  scenario_jobs.yml  scenario_non_breaking.job.yml
robust_etl_ecomm/: dbt_project.yml
robust_etl_ecomm/models/gold/: daily_revenue.sql  schema.yml
robust_etl_ecomm/models/silver/: schema.yml
scripts/: databricks_force_sync.sh
site/: 404.html  index.html
site/architecture/: index.html
site/search/: search_index.json
site/setup/: index.html
site/testing/: index.html
(+8 files in other folders)
